--- a/index.html
+++ b/index.html
@@ -1,4 +1,13 @@
-<div id="toolbar">
+<!-- index.html -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="css/styles.css">
+</head>
+<body>
+  <div id="toolbar">
     <label for="fileInput">Choose a PDF File</label>
     <input id="fileInput" accept=".pdf" type="file">
   </div>
@@ -15,3 +24,9 @@
       </svg>
     </button>
   </div>
+  <script src="js/script.js"></script>
+</body>
+</html>
+
+
+
