--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="https://saikat-0.github.io/my-hosted-files/pdf-styles.css">
 </head>
 <body>
   <div id="toolbar">
@@ -24,9 +24,6 @@
       </svg>
     </button>
   </div>
-  <script src="js/script.js"></script>
+  <script src="https://saikat-0.github.io/my-hosted-files/pdf-script.js"></script>
 </body>
 </html>
-
-
-
