Update Ultimate HTML Editor.html
link removed

--- a/Ultimate HTML Editor.html
+++ b/Ultimate HTML Editor.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 <h1>HTML Editor - Full Version</h1>
-<p>This HTML editor has a larger toolbar than the <a href="https://www.quackit.com/html/online-html-editor/">standard one</a>. And you know what that means? Exactly... more buttons!</p>
+<p>This HTML editor has a larger toolbar than the standard one. And you know what that means? Exactly... more buttons!</p>
 <p>Here is some <strong>important text</strong>. And here is text that has been <em>emphasized</em>.</p>
 <p>Below is an unordered (bullet) list, and an ordered/numbered list:</p>
 <p>Grocery list:</p>
