--- a/imgpro.html
+++ b/imgpro.html
@@ -1,4 +1,5 @@
-
+<html>
+<head>
     <style>
   body {
     font-family: 'Segoe UI', sans-serif;
@@ -183,7 +184,8 @@
     }
   }
 </style>
-
+<head>
+    <body>
     <div id="root"></div>
 
     <!-- React and ReactDOM CDN -->
@@ -447,3 +449,6 @@ const App = () => {
 ReactDOM.render(<App />, document.getElementById('root'));
   
 </script>
+
+    </body>
+</html>
