--- a/babla-vvip-tools-4in1.html
+++ b/babla-vvip-tools-4in1.html
@@ -24,7 +24,7 @@ body, html {
   padding: 14px 16px;
   margin: 5px 2px;
   font-size: 25px;
-  width: 24.54%;
+  width: 19.54%;
 }
 
 .tablink:hover {
@@ -45,14 +45,17 @@ body, html {
 #News {background-color: #02025c;}
 #Contact {background-color: #750133;}
 #About {background-color: indigo;}
+#Aladin {background-color: black;}
 </style>
 </head>
 <body>
 
-<button class="tablink" onclick="openPage('Home', this, 'red')">Single</button>
-<button class="tablink" onclick="openPage('News', this, 'green')" id="defaultOpen">Collage(crop)</button>
+<button class="tablink" onclick="openPage('Home', this, 'red')" id="defaultOpen">Single</button>
+<button class="tablink" onclick="openPage('News', this, 'green')">Collage(crop)</button>
 <button class="tablink" onclick="openPage('Contact', this, 'blue')">Collage(stretch)</button>
 <button class="tablink" onclick="openPage('About', this, 'orange')">Batch (stack)</button>
+
+<button class="tablink" onclick="openPage('Aladin', this, 'darkcyan')">Single(retain px)</button>
 
 <div id="Home" class="tabcontent">
   <h1>Vvip Image Creator Pro (single) ++</h1>
@@ -72,6 +75,11 @@ body, html {
 <div id="About" class="tabcontent">
   <h1>Vvip Batch Image Creator Pro (Stack) ++</h1>
 							<iframe src="https://saikat-0.github.io/img-stack.html" title="single" style="width: 100%; height: 100vh; border: none;"></iframe>
+</div>
+
+<div id="Aladin" class="tabcontent">
+  <h1>Single img (Retain inputted image pixels)</h1>
+							<iframe src="https://saikat-0.github.io/Single-img-retain-old-pixels.html" title="single" style="width: 100%; height: 100vh; border: none;"></iframe>
 </div>
 
 <script>
