--- a/vvip-dashboard-final.html
+++ b/vvip-dashboard-final.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Popup Management System</title>
+    <title>Vvip Dashboard Final</title>
     <style>
         :root {
             --primary-color: #000261;
