--- a/Vvip-Pomodoro.html
+++ b/Vvip-Pomodoro.html
@@ -10,7 +10,7 @@
       background-color: #f0f0f0;
       margin: 0;
       padding: 20px;
-      overflow: hidden; /* Prevents scrollbars when the popup is active */
+      overflow: none; /* Prevents scrollbars when the popup is active */
     }
     h1 {
       text-align: center;
